# R1

./: .gitignore  README.md  pyproject.toml
paper/: ieeeaccess.cls  main.tex
results/raw/: dataset_summary.csv  run_results.csv  search_results.csv
results/summary/: dataset_model_summary.csv  dataset_summary.tex  dataset_winners.csv  macro_f1_by_dataset.csv  macro_f1_mean_ranks.csv  model_summary.csv  model_summary.tex  model_summary_with_ranks.csv  significance_tests.csv  stability_summary.csv  vs_mlp_summary.csv
scripts/: build_manuscript_assets.py  run_benchmark.py  summarize_results.py
src/r1/: __init__.py  benchmark.py  reporting.py
