[project]
name = "r1"
version = "0.1.0"
description = "Laptop-scale tabular ML benchmark and manuscript artifacts"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.4.4",
  "openml>=0.15.1",
  "pandas>=3.0.2",
  "jinja2>=3.1.6",
  "pyyaml>=6.0.3",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
  "seaborn>=0.13.2",
  "tabulate>=0.10.0",
  "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/r1"]

[tool.uv]
package = true
